--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,19 @@ set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
 find_package(Boost 1.68 REQUIRED COMPONENTS log log_setup unit_test_framework)
 message(STATUS "Boost version: ${Boost_VERSION}")
+
+
+find_package(XercesC CONFIG REQUIRED)
+message(STATUS "Xerces-C version: ${XercesC_VERSION}")
+
                   
 # This is needed if your Boost version is newer than your CMake version
 # or if you have an old version of CMake (<3.5)
-if(NOT TARGET Boost::filesystem)
-    add_library(Boost::filesystem IMPORTED INTERFACE)
-    set_property(TARGET Boost::filesystem PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
-    set_property(TARGET Boost::filesystem PROPERTY INTERFACE_LINK_LIBRARIES ${Boost_LIBRARIES})
-endif()
+#if(NOT TARGET Boost::filesystem)
+#    add_library(Boost::filesystem IMPORTED INTERFACE)
+#    set_property(TARGET Boost::filesystem PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
+#    set_property(TARGET Boost::filesystem PROPERTY INTERFACE_LINK_LIBRARIES ${Boost_LIBRARIES})
+#endif()
                   
 enable_testing()
 include(CTest)
