--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(${PROJECT_NAME}Test PUBLIC ../include)
 target_compile_features(${PROJECT_NAME}Test PUBLIC cxx_std_17)
 set_target_properties(${PROJECT_NAME}Test PROPERTIES CXX_EXTENSIONS OFF)
 
-target_link_libraries(${PROJECT_NAME}Test PUBLIC Sugar++ Boost::filesystem Boost::unit_test_framework
+target_link_libraries(${PROJECT_NAME}Test PUBLIC Sugar++ Boost::filesystem Boost::unit_test_framework XercesC::XercesC
                                                             version)
 
 add_test(NAME "${PROJECT_NAME}Test" COMMAND "${PROJECT_NAME}Test" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
