--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install boost, xerces, lcov, gcov
-      run: vcpkg install boost-test boost-log xerces-c lcov gcovr --triplet x64-windows
+      run: vcpkg install boost-test boost-log xerces-c --triplet x64-windows
     - name: cmake config
       run: |
         md build
