--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -43,10 +43,8 @@ jobs:
         with:
             # The boost version to install, e.g. "1.73.0"
             boost_version: 1.71.0
-            # The toolset used to compile boost, e.g. "msvc"
-            # toolset: # optional, default is 
-            # The platform version boost was compiled on, e.g. "18.04"
-            # platform_version: # optional, default is 
+            toolset: msvc 
+            platform_version: 2022 
             # Whether the boost libraries are linked statically or dynamically
             # link: # optional, default is 
             # The architecture the binaries were built for
@@ -58,6 +56,8 @@ jobs:
 
       - name: Configure CMake
         run: cmake -B ${{ env.build }}
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
       # Build is not required unless generated source files are used
       # - name: Build CMake
