--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -56,6 +56,8 @@ jobs:
 
       - name: Configure CMake
         run: cmake -B ${{ env.build }}
+              -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+              -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
