--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -9,15 +9,50 @@ jobs:
       
     steps:
     - uses: actions/checkout@v3
-    - name: install boost, xerces, lcov, gcov
-      run: vcpkg install boost-test boost-log xerces-c --triplet x64-windows
-    - name: cmake config
+    
+    - name: Download and install Boost
+      uses: MarkusJx/install-boost@v2.4.4
+      with:
+          # The boost version to install, e.g. "1.73.0"
+          boost_version: 1.81.0
+          toolset: msvc 
+          platform_version: 2022 
+            # Whether the boost libraries are linked statically or dynamically
+            # link: # optional, default is 
+            # The architecture the binaries were built for
+            # arch: # optional, default is x86
+            # The dirctory to install boost into
+            # boost_install_dir: # optional, default is 
+            # Wheter to use actions/cache to improve build times
+            # cache: # optional, default is true
+
+    - name: Configure CMake
       run: |
-        md build
-        cd build
-        cmake ../ -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-    - name: make
-      run: cmake --build ./build
+           cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
+           -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+           -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+      env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+
+    # Build is not required unless generated source files are used
+    - name: Build CMake
+      run: cmake --build ${{ env.build }}
+
+    
+    #- name: install boost, xerces, lcov, gcov
+    #  run: vcpkg install boost-test boost-log xerces-c --triplet x64-windows
+    #- name: cmake config
+    #  run: |
+    #    md build
+    #    cd build
+    #    cmake ../ -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+    #- name: make
+    #  run: cmake --build ./build
+    
     - name: run unit tests
       run: cmake --build ./build --target test
       
+
+
+
+
