--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -16,7 +16,8 @@ jobs:
           # The boost version to install, e.g. "1.73.0"
           boost_version: 1.81.0
           toolset: msvc 
-          platform_version: 2022 
+          platform_version: 2022
+          link: shared
             # Whether the boost libraries are linked statically or dynamically
             # link: # optional, default is 
             # The architecture the binaries were built for
@@ -28,8 +29,8 @@ jobs:
 
     - name: Configure CMake
       run: |
-           cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
-           -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+           cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build \
+           -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include \
            -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
