--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -12,6 +12,7 @@ jobs:
     
     - name: Download and install Boost
       uses: MarkusJx/install-boost@v2.4.4
+      id: install-boost
       with:
           # The boost version to install, e.g. "1.73.0"
           boost_version: 1.81.0
