--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -14,22 +14,18 @@ jobs:
       uses: MarkusJx/install-boost@v2.4.4
       id: install-boost
       with:
-          # The boost version to install, e.g. "1.73.0"
           boost_version: 1.81.0
           toolset: msvc 
           platform_version: 2022
           link: shared
-            # Whether the boost libraries are linked statically or dynamically
-            # link: # optional, default is 
-            # The architecture the binaries were built for
-            # arch: # optional, default is x86
-            # The dirctory to install boost into
-            # boost_install_dir: # optional, default is 
-            # Wheter to use actions/cache to improve build times
+          arch: x86
             # cache: # optional, default is true
+            
+    - name: install xerces
+      run: vcpkg install xerces-c --triplet x64-windows
 
     - name: Configure CMake
-      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
