--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -40,6 +40,7 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: MarkusJx/install-boost@d175e516e6d321b68ff67afecf7da5e7c53c16f7
         uses: MarkusJx/install-boost@v2.4.4
+        id: install-boost
         with:
             # The boost version to install, e.g. "1.73.0"
             boost_version: 1.81.0
@@ -56,9 +57,7 @@ jobs:
 
       - name: Configure CMake
         run: |
-             cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
-             -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
-             -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+             cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
