--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -44,10 +44,12 @@ jobs:
             toolset: msvc 
             platform_version: 2022
             link: shared
+            
+      - name: install xerces
+        run: vcpkg install xerces-c --triplet x64-windows
 
       - name: Configure CMake
-        run: |
-             cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
+        run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
