--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -24,17 +24,23 @@ jobs:
           platform_version: 2022
           link: shared
           arch: x86
-            # cache: # optional, default is true
             
-    - name: install xerces
-      run: vcpkg install xerces-c --triplet x64-windows
+    #- name: install xerces
+    #  run: vcpkg install xerces-c --triplet x64-windows
+    
+    - name: vcpkg installs xerces-c
+      uses: johnwason/vcpkg-action@v4
+      id: vcpkg
+      with:
+          pkgs: xerces-c
+          triplet: x64-windows
+          token: ${{ github.token }}
 
     - name: Configure CMake
-      run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+      run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} ${{ steps.vcpkg.outputs.vcpkg-cmake-config }}
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
-    # Build is not required unless generated source files are used
     - name: Build CMake
       run: cmake --build ${{ env.build }}
 
