--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -19,4 +19,4 @@ jobs:
     - name: make
       run: cmake --build ./build
     - name: run unit tests
-      run: cmake --build ./build --target test
+      run: cmake --build ./build --target Sugar++Test
