--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -45,12 +45,17 @@ jobs:
             toolset: msvc 
             platform_version: 2022
             link: shared
-            
-      - name: install xerces
-        run: vcpkg install xerces-c --triplet x64-windows
+        
+      - name: vcpkg installs xerces-c
+        uses: johnwason/vcpkg-action@v4
+        id: vcpkg
+        with:
+          pkgs: xerces-c
+          triplet: x64-windows
+          token: ${{ github.token }}
 
       - name: Configure CMake
-        run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+        run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} ${{ steps.vcpkg.outputs.vcpkg-cmake-config }}
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
