--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -2,6 +2,11 @@ name: CI-Linux
 
 on: [push]
 
+env:
+  # Path to the CMake build directory.
+  build: '${{ github.workspace }}/build'
+  config: 'Debug'
+
 jobs:
   build:
 
@@ -12,11 +17,28 @@ jobs:
     - name: install boost, xerces, lcov, gcov
       run: sudo apt install libboost-test-dev libboost-log-dev libxerces-c-dev lcov gcovr
     - name: cmake config
-      run: |
-        mkdir build
-        cd build
-        cmake ../
+      run: cmake . -B ${{ env.build }}
     - name: make
-      run: cmake --build ./build
+      run: cmake --build ${{ env.build }}
     - name: run unit tests
-      run: cmake --build ./build --target Sugar++Test
+      run: cmake --build ${{ env.build }} --target Sugar++Test
+    - name: run coverage
+      run: cmake --build ${{ env.build }} --target Sugar++_lcov  
+    - name: Report code coverage
+      uses: zgosalvez/github-actions-report-lcov@v3
+      with:
+        coverage-files: ${{ env.build }}/Sugar++_lcov.info
+        minimum-coverage: 45
+        artifact-name: code-coverage-report
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        working-directory: ${{ env.build }}
+        update-comment: true
+      
+      
+      
+      
+      
+      
+      
+      
+      
