fix running under linux

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_library(${PROJECT_NAME} STATIC 
-                                    CXXWinApi.cpp
+                                    $<$<PLATFORM_ID:Windows>:CXXWinApi.cpp>
                                     File.cpp
                                     SppString.cpp
 									Tracing.cpp
