--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -34,7 +34,7 @@ jobs:
           token: ${{ github.token }}
 
     - name: Configure CMake
-      run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} ${{ steps.vcpkg.outputs.vcpkg-cmake-config }}
+      run: cmake . -DCMAKE_BUILD_TYPE=${{ env.config }} -B ${{ env.build }} ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} -DBUILD_DOC=OFF
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
