--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -28,19 +28,13 @@ jobs:
 
     - name: run unit tests
       run: cmake --build ${{ env.build }} --target Sugar++Test
-
-    #- name: run coverage
-    #  run: cmake --build ${{ env.build }} --target Sugar++_lcov
       
-    #- name: Report code coverage
-    #  uses: zgosalvez/github-actions-report-lcov@v3
-    #  with:
-    #    coverage-files: ${{ env.build }}/Sugar++_lcov.info
-    #    minimum-coverage: 45
-    #    artifact-name: code-coverage-report
-    #    github-token: ${{ secrets.GITHUB_TOKEN }}
-    #    working-directory: ${{ env.build }}
-    #    update-comment: true
+    - name: Publish test results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        files: |
+          ${{ env.build }}/**/*results.xml
 
     - name: Create nojekyll to ensure doxygen pages with underscores work on gh pages
       run: touch ${{ env.build }}/doc/html/.nojekyll
@@ -52,6 +46,26 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         branch: "gh-pages"
         folder: ${{ env.build }}/doc/html
+        
+    - name: Run coverage
+      run: cmake --build ${{ env.build }} --target Sugar++_lcov
+
+    - name: Report code coverage
+      uses: romeovs/lcov-reporter-action@v0.3.1
+      with:
+        lcov-file: ${{ env.build }}/Sugar++_lcov.info
+        lcov-base: ${{ env.build }}/Sugar++_lcov.base
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        title: Coverage Report
+        
+        
+        
+        
+        
+        
+        
+        
+        
       
       
       
