--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -48,7 +48,7 @@ jobs:
         folder: ${{ env.build }}/doc/html
         
     - name: Report code coverage with gcovr and coveralls
-      uses: threeal/gcovr-action@070be6ee02665a5b53d149cfc22eb6d3fc6eac05
+      uses: threeal/gcovr-action@v1.0.0
       with:
         excludes: |
           test/*
